# TeleVTB

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.json  bot.py  config.py  database.py  main.py  pyproject.toml  render.yml  replit.md  youtube_bot.db  youtube_monitor.py  ❤️.gitignore  ❤️.replit
.github/workflows/: deploy.yml
attached_assets/: Pasted-Telegram-Bot-Core-Features-Live--1755617533263_1755617533264.txt
❤️.github/workflows/: deploy.yml
